@@ -103,6 +103,8 @@ Documentation
 
 * GITHUB#10633: Update javadocs in TestBackwardsCompatibility to use gradle and not ant. (Usman Shaikh)
 
+* GITHUB#12220: Hunspell: disallow hidden title-case entries from compound middle/end
+
 Other
 ---------------------
 
